--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ h1 {
   margin-right:50px;
 }
 i{
-  //margin-right:5px;
+  margin-right:5px;
 }
 
 
@@ -94,9 +94,10 @@ i{
 .submit-button {
     background: transparent;
     border: none;
-    width: 65px;
+    width: 55px;
     height: 60px;
     color: white;
+  margin-left:5px;
 }
 
 .searchbox{
