--- a/misc/index.css
+++ b/misc/index.css
@@ -10,7 +10,7 @@
 body { 
   min-height: 100vh;
   background: #171717;
-  overflow:hidden;
+  overflow-x: hidden;
 }
 h1 {
   text-align: center;
@@ -22,8 +22,9 @@ h1 {
 #ccontainer {
   float:left;
   width:33%;
-  position: relative;
+  position: fixed;
   margin-left:-5%;
+  height:100%
 }
 h2 {
   text-align:center;
@@ -31,20 +32,32 @@ h2 {
   font-size:50px;
   color:#aba0a0;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #777777;
+}
+::-webkit-scrollbar-thumb {
+  background: #444444;
+  border-radius:2px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  border-radius:2px;
+}
 h3 {
   text-align:center;
   font-family: 'Poppins';
   font-size:24px;
   color:#aba0a0;
 }
-#btext {
-  font-size: 24px !important;
-}
 #ocontainer {
   float:right;
   margin-left:70%;
   width:33%;
   position:fixed;
+  height:100%
 }
 #bcontainer {
   margin:auto;
@@ -52,6 +65,7 @@ h3 {
   position:fixed;
   z-index:100;
   margin-left:32%;
+  height:100%
 }
 .clinks {
   color:#aba0a0;
